<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scaleType="fitXY" >
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:background="@color/header_blue" >

        <TextView
            android:id="@+id/textView_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="NOTIFICATIONS"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/imageView_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView_menu1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:src="@drawable/watch" />

    </RelativeLayout>
	

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_corner_white"
        android:gravity="center_vertical"
        android:orientation="vertical" >
	    
		<RelativeLayout
		    android:id="@+id/confUserProfile"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
		    android:layout_weight="1.0"
			android:gravity="center_vertical"
			android:orientation="horizontal">
		       
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/userProfile"
		        android:textSize="16dp" />
		    
		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:src="@drawable/nav_btn_advance"
			    />
	    
		</RelativeLayout>
		
		<ImageView 
	        android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="@color/lightgray"
		    />
		
		<RelativeLayout
		    android:id="@+id/confNotifications"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical">
			  
			<TextView			    
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="10dp"
			    android:text="@string/notifications"
			    android:textSize="16dp" />
			
			<ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
	    
		</RelativeLayout>
		
		<ImageView 
	        android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="@color/lightgray"
		    />
	
		<RelativeLayout
		    android:id="@+id/confSocialAccounts"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">
		       
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/socialAccounts"
		        android:textSize="16dp" />
		    
		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
	    
		</RelativeLayout>
		
		<ImageView 
	        android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="@color/lightgray"
		    />
		
		<RelativeLayout
		    android:id="@+id/confDevices"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">
	       
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/devices"
		        android:textSize="16dp" />
		    
		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
	    
		</RelativeLayout>
		
		<ImageView 
	        android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:background="@color/lightgray"
		    />
		
	   <RelativeLayout
	       android:id="@+id/confMeasurements"
	       android:layout_width="fill_parent"
	       android:layout_height="0dp"
		   android:layout_weight="1.0"
	       android:gravity="center_vertical"
	       android:orientation="horizontal">
	       
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/measurements"
		        android:textSize="16dp" />
		    
		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
	    
		</RelativeLayout>
		
	   <ImageView 
        android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@color/lightgray"
	    />

		<RelativeLayout
		    android:id="@+id/confSupport"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/support"
		        android:textSize="16dp" />

		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
		</RelativeLayout>
		
		<ImageView 
        android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@color/lightgray"
	    />
		
		<RelativeLayout
		    android:id="@+id/confAbout"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical"
		    android:orientation="horizontal">

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/about"
		        android:textSize="16dp" />

		    <ImageView 
		        android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true"
		        android:layout_marginRight="10dp"
		        android:background="@drawable/nav_btn_advance"
			    />
		</RelativeLayout>
		
		<ImageView 
        android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@color/lightgray"
	    />
		
		<RelativeLayout		    
		    android:id="@+id/confLogOut"
		    android:layout_width="fill_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1.0"
		    android:gravity="center_vertical"
		    android:orientation="horizontal" >

		    <TextView
		        android:id="@+id/titleLogout"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerVertical="true"
		        android:layout_marginLeft="10dp"
		        android:text="@string/logOut"
		        android:textSize="16dp" />
		</RelativeLayout>
		
	</LinearLayout>
</RelativeLayout>
